@@ -550,15 +550,13 @@ function togglecollapse(cid) {
 * @function
 * @param (String) msg The message to display
 * @param (String) title An optional title string.
+* @return promise
 */
 function cms_alert(msg, title) {
     'use strict';
-    if ( typeof ( msg ) === 'undefined') {
-        return;
-    }
-    if ( typeof ( title ) === 'undefined') {
-        title = cms_lang('alert');
-    }
+    var _d = $.Deferred();
+    if ( typeof ( msg ) === 'undefined') return;
+    if ( typeof ( title ) === 'undefined') title = cms_lang('alert');
 
     if ($('#cmsms_errorDialog').length === 0) {
         $('<div style="display: none;"><div id="cmsms_errorDialog"></div></div>').insertAfter('body');
@@ -566,8 +564,62 @@ function cms_alert(msg, title) {
     $('#cmsms_errorDialog').html(msg);
     $('#cmsms_errorDialog').dialog({
         modal : true,
-        title : title
+        title : title,
+	close: function( event, ui ) {
+	    _d.resolve();
+	}
     });
+    return _d.promise();
+} // end
+
+/*
+* @description jquery simple confirm dialog.
+* @function
+* @param (String) msg The message to display
+* @param (String) title An optional title string.
+* @param (String) yestxt Optional text for the yes button.
+* @param (String) notxt Optional text for the no button.
+* @return promise
+*/
+function cms_confirm(msg, title, yestxt, notxt) {
+    'use strict';
+    var _d = new $.Deferred();
+    if ( typeof ( msg ) === 'undefined') return;
+    if ( typeof ( title ) === 'undefined') title = cms_lang('confirm');
+    if ( typeof ( yestxt ) === 'undefined' ) yestxt = cms_data.lang_yes;
+    if ( typeof ( notxt ) === 'undefined' ) notxt = cms_data.lang_no;
+
+    if ($('#cmsms_confirmDialog').length === 0) {
+        $('<div style="display: none;"><div id="cmsms_confirmDialog"></div></div>').insertAfter('body');
+    }
+    $('#cmsms_confirmDialog').html(msg);
+    $('#cmsms_confirmDialog').dialog({
+        modal : true,
+        title : title,
+	buttons: [
+	    {
+		text: yestxt,
+		icons: {
+		    primary: 'ui-icon-check'
+		},
+		click: function(ev) {
+		    $(this).dialog('close');
+		    _d.resolve(yestxt);
+		}
+	    },
+	    {
+		text: notxt,
+		icons: {
+		    primary: 'ui-icon-close'
+		},
+		click: function(ev) {
+		    $(this).dialog('close');
+		    _d.reject(notxt);
+		}
+	    }
+	],
+    });
+    return _d.promise();
 } // end
 
 /**
